--- a/html/beauty_float.html
+++ b/html/beauty_float.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/beauty_float.css">
 </head>
 <body>
+asdasdasdasd
     <div class="header">
         <div class="nav1">
             <a href="#" class="nav1font button fontfamily400 buttonhovertext">Доставка</a>
